--- a/src/app/components/edit-user/edit-user.component.html
+++ b/src/app/components/edit-user/edit-user.component.html
@@ -29,6 +29,12 @@
         <label>agama</label>
         <input type="agama" formControlName="agama" class="form-control" required>
       </div>
+
+      <div class="mb-3">
+        <label>alamat</label>
+        <input type="alamat" formControlName="alamat" class="form-control" required>
+      </div>
+    
     
      <div class="mb-3">
       <button type="submit" class="btn btn-primary">Update</button>
