--- a/src/app/components/create-user/create-user.component.html
+++ b/src/app/components/create-user/create-user.component.html
@@ -13,7 +13,7 @@
                 
                   <div class="mb-3">
                     <label>email</label>
-                    <input type="email" formControlName="email" class="form-control" required>
+                    <input type="text" formControlName="email" class="form-control" required>
                   </div>
               
                   <div class="mb-3">
@@ -25,12 +25,12 @@
                       <label>warganegara</label>
                       <input type="warganegara" formControlName="warganegara" class="form-control" required>
                     </div>
-              
+
                     <div class="mb-3">
                       <label>agama</label>
                       <input type="agama" formControlName="agama" class="form-control" required>
                     </div>
-                
+
                     <div class="mb-3">
                       <label>alamat</label>
                       <input type="alamat" formControlName="alamat" class="form-control" required>
