--- a/src/app/components/tanaman-edit/tanaman-edit.component.html
+++ b/src/app/components/tanaman-edit/tanaman-edit.component.html
@@ -2,7 +2,7 @@
 <form [formGroup]="editForm" (ngSubmit)="onSubmit()" novalidate>
     <div class="mb-3">
       <label>nama</label>
-      <input type="text" formControlName="text" class="form-control" required>
+      <input type="text" formControlName="nama" class="form-control" required>
     </div>
   
     <div class="mb-3">
